welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: only classes can have declared but undefined members
  def nombreIl
      ^