welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var n  = num.length
  var niv=1
  var haut=num(0)
  def nombreIl
  for (k<-1 to n-1){
    if (num(k)>haut){
      niv=niv+1
      haut=num(k)
    }
    else{
      niv=niv
      haut=haut
    }
  }
  return niv
}